Bug 1502566 - When entering fullscreen mode, use the intrinsic resolution rather than a resolution of 1. r=kats

Differential Revision: https://phabricator.services.mozilla.com/D10754